[gd_scene load_steps=2 format=3 uid="uid://c8qvt5qjkuv7qh"]

[ext_resource type="Script" uid="uid://jetmjl1q5pvo" path="res://scenes/relic/relic_manager_scene.gd" id="1_yvmqe"]

[node name="RelicManagerScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvmqe")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.9)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HeaderPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "遗物管理"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "关闭"

[node name="ContentPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="RelicGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ContentPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="FooterPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/FooterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer/FooterPanel/HBoxContainer"]
layout_mode = 2
text = "选择遗物查看详细信息"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RelicItemTemplate" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(200, 250)
layout_mode = 0
offset_right = 200.0
offset_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="RelicItemTemplate"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="RelicIcon" type="TextureRect" parent="RelicItemTemplate/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="RelicName" type="Label" parent="RelicItemTemplate/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "遗物名称"
horizontal_alignment = 1

[node name="RelicRarity" type="Label" parent="RelicItemTemplate/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "普通"
horizontal_alignment = 1

[node name="RelicDesc" type="Label" parent="RelicItemTemplate/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "遗物描述"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ActivateButton" type="Button" parent="RelicItemTemplate/VBoxContainer"]
layout_mode = 2
text = "激活"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
